...
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ACY-HF-qFN"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
...
                                <rect key="frame" x="8" y="70" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="6gf-qO-utz"/>
                                    <constraint firstAttribute="width" constant="48" id="ZVp-UR-xob"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="EYT-qY-YQ5" eventType="touchUpInside" id="CUp-JA-zTr"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9k5-Kg-FpN" userLabel="shareButton">
                                <rect key="frame" x="195" y="855" width="50" height="50"/>
...
