...
    override func awakeFromNib() {
        super.awakeFromNib()
        selectionStyle = .none
        cellImage.contentMode = .scaleAspectFill
        cellImage.clipsToBounds = true
        likeButton.adjustsImageWhenHighlighted = false
        likeButton.accessibilityLabel = "Like"
    }

    override func layoutSubviews() {
        super.layoutSubviews()
        applyGradientToImage()
    }
...
